@startuml

set namespaceSeparator none
hide empty members

class Tracer <<Singleton>> {
    + Pigment[][] render()
    - Pigment trace()
}

hide Tracer fields

class Scene {
    + void add(Entity)
}

hide Scene fields

class Settings {
    ...
    + void addLight(Light)
}

class Light {
    + Vector3 origin
    + double falloff
    + double ambient
    + Pigment color
}

hide Light methods

abstract class Entity {
    + {abstract} Hit intersect(Ray r)
}

hide Entity attributes

class Material {
    + Pigment color
    + double reflectivity
    + double transparency
    + double refractIndex
    + double diffuse
    + double specular
    + double shininess
}

hide Material methods

class Camera {
    - Vector3 position
    - double roll
    - Matrix4 viewMatrix
}

hide Camera methods


Entity "1 " -- " * " Material

Scene "1" o-left- "*" Light
Scene "1" -- "1   " Camera
Scene "1   " *-- "*" Entity

Scene "1" -right- "1" Settings
Tracer -- Scene


@enduml